Add layer connection and configuration

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "ConnectionString": "Host=localhost;Port=5432;Database=Books;UserName=postgres;Password=postgres",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
