--- a/API/API.csproj
+++ b/API/API.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\App\App.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure.EvensSourcerer\Infrastructure.EvensSourcerer.csproj" />
     <ProjectReference Include="..\Persistense\Persistense.csproj" />
     <ProjectReference Include="..\SagaHandler\Infrastructure.SagaHandler.csproj" />
   </ItemGroup>
