--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": "Host=localhost;Port=5432;Database=Bills;UserName=dbAccesor;Password=testPassword",
+  "ConnectionString": "Host=localhost;Port=5432;Database=Producer;UserName=dbAccesor;Password=testPassword",
 
   "Logging": {
     "LogLevel": {
