realise outbox pattern

--- a/Infrastructure.EventProducer.Kafka/Infrastructure.EventProducer.Kafka.csproj
+++ b/Infrastructure.EventProducer.Kafka/Infrastructure.EventProducer.Kafka.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Infrastructure.EvensSourcerer</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -24,6 +25,7 @@
 
     <ItemGroup>
       <PackageReference Include="Confluent.Kafka" Version="2.6.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
