--- a/API/API.csproj
+++ b/API/API.csproj
@@ -13,7 +13,9 @@
   <ItemGroup>
     <ProjectReference Include="..\App\App.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
-    <ProjectReference Include="..\Infrastructure.EvensSourcerer\Infrastructure.EvensSourcerer.csproj" />
+    <ProjectReference Include="..\Infrastructure.EventProducer.Kafka\Infrastructure.EventProducer.Kafka.csproj" />
+    <ProjectReference Include="..\Infrastructure.TransactionalOutbox.Dapper\Infrastructure.TransactionalOutbox.Dapper.csproj" />
+    <ProjectReference Include="..\Infrastructure.TransactionalOutbox.PollingPublisher.Kafka\Infrastructure.TransactionalOutbox.PollingPublisher.Kafka.csproj" />
     <ProjectReference Include="..\Persistense\Persistense.csproj" />
     <ProjectReference Include="..\SagaHandler\Infrastructure.SagaHandler.csproj" />
   </ItemGroup>
