--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="CSharpFunctionalExtensions" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DomainEvents\" />
+  </ItemGroup>
+
 </Project>
